tests/ui/fail/non_const_expr.stderr
error[E0435]: attempt to use a non-constant value in a constant
 --> tests/ui/fail/non_const_expr.rs:5:19
  |
5 |     let _ = nn64!(_value);
  |             ------^^^^^^- this would need to be a `let`
